--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,25 @@ on:
     branches: [ main ]
 
 jobs:
+  stylelint:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Node
+        uses: actions/setup-node@v4
+        with:
+          node-version-file: ".node-version"
+          cache: yarn
+
+      - name: Install Yarn packages
+        run: npx --yes ci
+
+      - name: Lint CSS files with stylelint
+        run: yarn lint:css
+
   eslint:
     runs-on: ubuntu-latest
 
