--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint:js": "eslint 'app/{assets,components,frontend,javascript}/**/*.{cjs,js,jsx,ts,tsx}'",
     "fix:js": "npm run -- lint:js --fix",
     "lint": "npm-run-all lint:**",
-    "fix": "npm-run-all fix:**"
+    "fix": "npm-run-all fix:**",
+    "lint:css": "stylelint 'app/{components,frontend,assets/stylesheets}/**/*.css'",
+    "fix:css": "npm run -- lint:css --fix"
   },
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
@@ -30,6 +32,10 @@
     "eslint-plugin-prettier": "^5.2.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.3.3",
-    "run-pty": "^5"
+    "run-pty": "^5",
+    "stylelint": "^16.9.0",
+    "stylelint-config-standard": "^36.0.1",
+    "stylelint-declaration-strict-value": "^1.10.6",
+    "stylelint-prettier": "^5.0.2"
   }
 }
