--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
     "geocoder",
     "groupdate",
     "hairtrigger",
+    "hotwired",
     "jbuilder",
     "kaminari",
     "nokogiri",
@@ -31,6 +32,7 @@
     "shoulda",
     "sidekiq",
     "simplecov",
+    "tailwindcss",
     "tomo",
     "useragent",
     "vite",
