--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.10",
+    "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
     "modern-normalize": "^3.0.0",
     "postcss": "^8.4.47",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "rollup": "^4.2.0",
     "stimulus-vite-helpers": "^3.1.0",
     "vite": "^5.0.0",
@@ -26,11 +29,19 @@
   "devDependencies": {
     "@eslint/js": "^9.11.0",
     "@types/eslint": "^9.6.1",
-    "@vitejs/plugin-react": "^4.3.1",
-    "eslint": "^9",
+    "@types/react": "^18.3.8",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^8.6.0",
+    "@typescript-eslint/parser": "^8.6.0",
+    "eslint": "^9.11.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-formatter-compact": "^8.40.0",
+    "eslint-plugin-import": "^2.30.0",
+    "eslint-plugin-jsx-a11y": "^6.10.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.36.1",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.12",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.3.3",
     "run-pty": "^5",
@@ -38,6 +49,7 @@
     "stylelint-config-standard": "^36.0.1",
     "stylelint-declaration-strict-value": "^1.10.6",
     "stylelint-prettier": "^5.0.2",
-    "tailwindcss": "^3.4.12"
+    "tailwindcss": "^3.4.12",
+    "typescript": "^5.6.2"
   }
 }
