--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,22 @@
 {
   "css.lint.unknownAtRules": "ignore",
-  "editor.formatOnSave": true,
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "explicit"
   },
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.formatOnSave": true,
   "editor.rulers": [128],
   "eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact"],
   "files.eol": "\n",
   "prettier.requireConfig": true,
+  "[ruby]": {
+    "editor.defaultFormatter": "Shopify.ruby-lsp", // Use the Ruby LSP as the default formatter
+    "editor.formatOnSave": true, // Format files automatically when saving
+    "editor.formatOnType": true, // Enable formatting while typing
+    "editor.insertSpaces": true, // Use spaces and not tabs for indentation
+    "editor.semanticHighlighting.enabled": true, // Enable semantic highlighting
+    "editor.tabSize": 2 // Use 2 spaces for indentation
+  },
   "cSpell.words": [
     "actioncable",
     "actionmailbox",
