--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,10 +1,15 @@
 development:
-  adapter: async
+  # adapter: async
+  # adapter: redis
+  adapter: any_cable
+  url: redis://localhost:6379/1
+  channel_prefix: allegro_development
 
 test:
   adapter: test
 
 production:
-  adapter: redis
+  # adapter: redis
+  adapter: any_cable
   url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
   channel_prefix: allegro_production
