setup graphql backend

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -139,6 +139,11 @@ Naming/FileName:
 Naming/MemoizedInstanceVariableName:
   Enabled: false
 
+Naming/MethodParameterName:
+  AllowedNames:
+    - e
+    - id
+
 Naming/VariableNumber:
   Enabled: false
 
