view component contrib config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,5 +55,8 @@
     "useragent",
     "vite",
     "zeitwerk"
-  ]
+  ],
+  "[xml]": {
+    "editor.defaultFormatter": "DotJoshJohnson.xml"
+  }
 }
